--- a/app/assets/stylesheets/_tables.sass
+++ b/app/assets/stylesheets/_tables.sass
@@ -10,6 +10,8 @@ table
 
   td
     border-bottom: 1px solid $color-grey-3
+    &.center
+      text-align: 0
 
   thead
     background-color: $color-blue-0
