--- a/app/views/assignments/individual/_table_head.html.haml
+++ b/app/views/assignments/individual/_table_head.html.haml
@@ -22,11 +22,6 @@
   %th{:style => "min-width: 180px"}
 
   - if @assignment.release_necessary? && @assignment.grades.present?
-    %th{"data-dynatable-no-sort" => "true"}
-      %ul.button-group.radius
-        %li
-          %a{:href => "#", :class => "button secondary select-all" } Check All
-
-        %li
-          %a{:href => "#", :class => "button secondary select-none" } Uncheck All
-
+    %th{"data-dynatable-no-sort" => "true", :width => "120px" }  
+      %button.button.select-all= "Check"
+      %button.button.select-none= "Uncheck"
