--- a/app/views/earned_badges/mass_edit.html.haml
+++ b/app/views/earned_badges/mass_edit.html.haml
@@ -19,10 +19,9 @@
           %tr
             %th{:style => "text-align: right", :width => "50%"} Name
             %th{:style => "text-align: right", :width => "15%"} Earned
-            %th.center{:align => "center", :scope => "col", "data-dynatable-no-sort" => "true", :width => "25%" }
-              %span.sr-only Check/Uncheck
-              %button.button.select-all.tiny= "Check All"
-              %button.button.select-none.tiny= "Uncheck All"
+            %th{"data-dynatable-no-sort" => "true", :width => "120px" }  
+              %button.button.select-all= "Check"
+              %button.button.select-none= "Uncheck"
         - @earned_badges.each_with_index do |eb, i|
           %tr
             %td{:style => "text-align: right"}= link_to eb.student.name, student_path(eb.student)
