--- a/app/views/grades/mass_edit.html.haml
+++ b/app/views/grades/mass_edit.html.haml
@@ -25,8 +25,8 @@
             %th.center{:align => "center", :scope => "col", "data-dynatable-no-sort" => "true" }
               - if @assignment.grade_checkboxes?
                 %span.sr-only Check/Uncheck
-                %button.button.select-all.tiny= "Check All"
-                %button.button.select-none.tiny= "Uncheck All"
+                %button.button.select-all= "Check All"
+                %button.button.select-none= "Uncheck All"
             %th
         - @grades.each_with_index do |grade, i|
           %tr
