--- a/app/views/info/_in_progress_grades_table.haml
+++ b/app/views/info/_in_progress_grades_table.haml
@@ -4,49 +4,49 @@
 
 - @in_progress_grades_by_assignment.each do |assignment, grades|
   - cache ["v1", assignment] do
-    %h5.section-title
-      = link_to assignment.name, assignment
-      .right= link_to 'Quick Grade', mass_grade_assignment_path(assignment), :class => "button radius"
+    .assignment-in-progress
+      %h5
+        = link_to assignment.name, assignment
+        %span= link_to 'Quick Grade', mass_grade_assignment_path(assignment), :class => "button"
 
-    = form_tag edit_status_grades_assignment_path assignment do
-      %table.nofeatures_default_last_name_dynatable{"aria-describedby" => "inProgressTableCaption"}
-        %thead
-          %tr
-            - if assignment.is_individual?
-              %th{:scope => "col", :width => "8%"} First Name
-              %th{:scope => "col", :width => "8%"} Last Name
-              - if course.has_teams?
-                %th{:scope => "col", :width => "15%"}= "#{term_for :team}"
-            - elsif assignment.has_groups?
-              %th{:scope => "col"} Group
-            %th{:scope => "col", :width => "8%"} Score
-            %th{:scope => "col"} Feedback
-            %th{:scope => "col", "data-dynatable-no-sort" => "true", :width => "20%" }
-              %span.sr-only Actions
-            %th.center{:scope => "col", "data-dynatable-no-sort" => "true", :width => "15%" }
-              %span.sr-only Check/Uncheck
-              %button.button.select-all.tiny= "Check All"
-              %button.button.select-none.tiny= "Uncheck All"
-          %tbody
-            - grades.each do |g|
-              - cache ["v1", g] do
-                - student = g.student
-                - team = student.team_for_course(course)
-                %tr
-                  - if assignment.is_individual?
-                    %td= link_to student.try(:first_name), student_path(student)
-                    %td= link_to student.try(:last_name), student_path(student)
+      = form_tag edit_status_grades_assignment_path assignment do
+        %table.nofeatures_default_last_name_dynatable{"aria-describedby" => "inProgressTableCaption"}
+          %thead
+            %tr
+              - if assignment.is_individual?
+                %th{:scope => "col", :width => "8%"} First Name
+                %th{:scope => "col", :width => "8%"} Last Name
+                - if course.has_teams?
+                  %th{:scope => "col", :width => "15%"}= "#{term_for :team}"
+              - elsif assignment.has_groups?
+                %th{:scope => "col"} Group
+              %th{:scope => "col", :width => "8%"} Score
+              %th{:scope => "col"} Feedback
+              %th{:scope => "col", "data-dynatable-no-sort" => "true", :width => "20%" }
+                %span.sr-only Actions
+              %th{"data-dynatable-no-sort" => "true", :width => "120px" }  
+                %button.button.select-all= "Check"
+                %button.button.select-none= "Uncheck"
+            %tbody
+              - grades.each do |g|
+                - cache ["v1", g] do
+                  - student = g.student
+                  - team = student.team_for_course(course)
+                  %tr
+                    - if assignment.is_individual?
+                      %td= link_to student.try(:first_name), student_path(student)
+                      %td= link_to student.try(:last_name), student_path(student)
+                      %td
+                        - if course.has_teams? && student.present? && team.present?
+                          = link_to team.try(:name), team
+                      %td= points g.score
+                      %td= raw g.feedback
                     %td
-                      - if course.has_teams? && student.present? && team.present?
-                        = link_to team.try(:name), team
-                    %td= points g.score
-                    %td= raw g.feedback
-                  %td
-                    .right
-                      %ul
-                        %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Grade"), assignment_grade_path(g.assignment, :student_id => g.student_id), :class => "button"
-                        %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit Grade"), edit_assignment_grade_path(:assignment_id => assignment.id, :student_id => student.try(:id)), :class => "button"
-                  %td
-                    .center= check_box_tag "grade_ids[]", g.id
-        .right.form_buttons
-          = submit_tag "Update Selected Grade Statuses", :class => "button"
+                      .right
+                        %ul
+                          %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Grade"), assignment_grade_path(g.assignment, :student_id => g.student_id), :class => "button"
+                          %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit Grade"), edit_assignment_grade_path(:assignment_id => assignment.id, :student_id => student.try(:id)), :class => "button"
+                    %td.center= check_box_tag "grade_ids[]", g.id
+        .right
+          .submit-buttons
+            = submit_tag "Update Selected Grade Statuses", :class => "button"
