Removed detailed grade show page, styled unlock keys

--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -60,6 +60,8 @@ tbody
   ul
     margin: 0
     padding: 0 !important
+    list-style-type: none
+    
     li
       display: inline
       list-style-type: none
