--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -8,6 +8,12 @@
   float: left
   border-left: 1px dashed $primary-color-1
 
+  .avatar
+    ul li
+      display: inline
+      a:hover
+        background-color: $secondary-color-3
+
   .panel
     margin-bottom: 1.25rem
 
