--- a/app/assets/stylesheets/_student_subnav.sass
+++ b/app/assets/stylesheets/_student_subnav.sass
@@ -9,6 +9,10 @@
   width: auto
   height: 32px
 
+  ul
+    margin: 0
+    padding: 0
+
   dt
     text-transform: uppercase
 
@@ -16,6 +20,7 @@
   dd,
   li
     color: #FFF
+    list-style-type: none
     float: left
     margin-left: rem-calc(16)
     margin-bottom: 0
