--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -148,9 +148,11 @@ a:hover + .display_on_hover
   ul
     margin-bottom: 0
 
-  li 
-    font-size: .8rem
-    color: #FFF
+    li 
+      font-size: .8rem
+      color: #FFF
+      display: block
+      clear: both
 
 @media (min-width: 1072px)
   .panel .row
