--- a/app/views/assignments/_detailed_individual_show.haml
+++ b/app/views/assignments/_detailed_individual_show.haml
@@ -12,8 +12,6 @@
         %th Feedback
         - if @assignment.release_necessary?
           %th Status
-        - if @assignment.accepts_submissions?
-          %th Submission
         %th
         - if @assignment.release_necessary?
           %th{"data-dynatable-no-sort" => "true", :width => "120px" }  
@@ -39,29 +37,26 @@
           - if @assignment.release_necessary?
             %td
               = grade.status
-
-          - if @assignment.accepts_submissions?
-            %td
-              - student.submissions.where(:assignment_id => @assignment).each do |submission|
-                - if submission && grade
-                  = link_to "See Submission", assignment_grade_path(@assignment.id, :student_id => student.id), :class => 'button radius'
-                - elsif submission
-                  = link_to "See Submission", assignment_grade_path(@assignment.id, :student_id => student.id), :class => 'button radius'
-                - else
-                  = link_to "Submit", new_assignment_submission_path(@assignment, @submission, :user_id => student.id, :student_type => "User"), :class => 'button radius'
           %td
             .right
               %ul
-                %li= link_to "Dashboard", student_path(student), :class => 'button'
+                - student.submissions.where(:assignment_id => @assignment).each do |submission|
+                  - if submission && grade
+                    %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Submission"), assignment_grade_path(@assignment.id, :student_id => student.id), :class => 'button'
+                  - elsif submission
+                    %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Submission"), assignment_grade_path(@assignment.id, :student_id => student.id), :class => 'button'
+                  - else
+                    %li= link_to raw("<i class='fa fa-dashboard fa-fw'></i> Submit"), new_assignment_submission_path(@assignment, @submission, :user_id => student.id, :student_type => "User"), :class => 'button'
                 - if grade && grade.instructor_modified?
-                  %li= link_to "Edit Grade", edit_assignment_grade_path(@assignment, :student_id => student.id), :class => 'button'
+                  %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit Grade"), edit_assignment_grade_path(@assignment, :student_id => student.id), :class => 'button'
                 - else
-                  %li= link_to 'Grade', edit_assignment_grade_path(@assignment, :student_id => student.id), :class => 'button'
+                  %li= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), edit_assignment_grade_path(@assignment, :student_id => student.id), :class => 'button'
           - if @assignment.release_necessary?
             %td
               - if grade.is_graded?
                 .center= check_box_tag "grade_ids[]", grade.id
 
   - if @assignment.release_necessary? && @assignment.grades.present?
-    .right
-      = submit_tag "Update Selected Grade Statuses", :class => "button tiny radius"
+    .submit-buttons
+      .right
+        = submit_tag "Update Selected Grade Statuses", :class => "button"
