--- a/app/views/students/syllabus/_assignments.haml
+++ b/app/views/students/syllabus/_assignments.haml
@@ -22,20 +22,20 @@
         // with appropriate terminology. If a student has already set a weight, give the option to change
         // weight; else if the student has not yet set a weight, give the option to set weights for the assignment.
         - if assignment_type.student_weightable? && current_course.assignment_weight_open?
-          .label.radius.multiplier-setting-open
+          .label.multiplier-setting-open
             - if @student.weighted_assignments?
               = "#{current_student.weight_for_assignment_type(assignment_type)} #{(term_for :weights).titleize} Set"
               = link_to "(Change)", assignment_type_weights_path(:student_id => @student.id), assignment_type: assignment_type
             - else
               = link_to "Set #{(term_for :weights).titleize}", assignment_type_weights_path(:student_id => @student.id), assignment_type: assignment_type
         - elsif assignment_type.student_weightable?
-          .label.radius.multiplier-setting-closed= "#{current_student.weight_for_assignment_type(assignment_type)} #{(term_for :weights).titleize}"
+          .label.multiplier-setting-closed= "#{current_student.weight_for_assignment_type(assignment_type)} #{(term_for :weights).titleize}"
           // Display the description for the assignment type if it exists.
         - if assignment_type.predictor_description?
           %p.predictor-description= raw assignment_type.predictor_description
 
         // Display the assignments for each assignment type in a responsive table, below header.
-        %table.responsive
+        %table
           %thead
             %tr
               %th
@@ -43,7 +43,7 @@
               %th Points
               %th Due
               %th
-              %th{:style => "width: 200px"}
+              %th{:style => "width: 300px"}
           %tbody
             - assignments = assignment_type.assignments.includes(:assignment_type)
             - assignments.each do |assignment|
@@ -98,7 +98,7 @@
                       .right
                         %ul
                           - if grade_released_for_assignment
-                            %li= link_to "See Results", assignment_path(assignment, :anchor => "fndtn-tabt4"), :class => "button"
+                            %li= link_to raw("<i class='fa fa-eye fa-fw'></i> See Results"), assignment_path(assignment, :anchor => "fndtn-tabt4"), :class => "button"
                           - if assignment.has_groups?
                             - if group_for_assignment.present?
                               %li= link_to "See Group", group_path(group_for_assignment), :class => "button"
@@ -116,17 +116,17 @@
                                 %li= link_to "See Submission", assignment_path(assignment, :anchor => "fndtn-tabt3"), :class => 'button'
                               - elsif assignment.open?
                                 %li= link_to "Submit", new_assignment_submission_path(assignment, :student_id => @student), :class => 'button'
-                        - if current_user_is_staff?
-                          - grade = grade_for_assignment
-                          - if assignment.is_unlockable? && ! assignment.is_unlocked_for_student?(current_student)
-                            %li= link_to "Unlock", manually_unlock_unlock_state_path(:student_id => current_student.id, :assignment_id => assignment.id), :method => :post, :class => "button"
-                          - if assignment.is_individual?
-                            - if grade_released_for_assignment
-                              %li= link_to "Edit Grade", edit_assignment_grade_path(assignment.id, :student_id => @student.id), :class => 'button'
-                            - else
-                              %li= link_to 'Grade', edit_assignment_grade_path(:assignment_id =>assignment.id, :student_id => @student.id), :class => 'button'
-                          - elsif assignment.has_groups?
-                            - if grade_released_for_assignment
-                              %li= link_to "Edit Grade", group_grade_assignment_path(assignment, :group_id => group_for_assignment), :class => 'button'
-                            - else
-                              %li= link_to 'Grade', group_grade_assignment_path(assignment, :group_id => group_for_assignment), :class => 'button'
+                          - if current_user_is_staff?
+                            - grade = grade_for_assignment
+                            - if assignment.is_unlockable? && ! assignment.is_unlocked_for_student?(current_student)
+                              %li= link_to raw("<i class='fa fa-lock fa-fw'></i> Unlock"), manually_unlock_unlock_state_path(:student_id => current_student.id, :assignment_id => assignment.id), :method => :post, :class => "button"
+                            - if assignment.is_individual?
+                              - if grade_released_for_assignment
+                                %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit Grade"), edit_assignment_grade_path(assignment.id, :student_id => @student.id), :class => 'button'
+                              - else
+                                %li= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), edit_assignment_grade_path(:assignment_id =>assignment.id, :student_id => @student.id), :class => 'button'
+                            - elsif assignment.has_groups?
+                              - if grade_released_for_assignment
+                                %li= link_to raw("<i class='fa fa-edit fa-fw'></i> Edit Grade"), group_grade_assignment_path(assignment, :group_id => group_for_assignment), :class => 'button'
+                              - else
+                                %li= link_to raw("<i class='fa fa-check fa-fw'></i> Grade"), group_grade_assignment_path(assignment, :group_id => group_for_assignment), :class => 'button'
