--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -34,12 +34,17 @@
 
     li
       float: left
+      padding: 0
+      list-style-type: none
       border-right: 1px solid $color-green-3
     li:first-child button
-    li:last-child
-      padding: .45rem 0 .3rem
+      padding: 0
+    li:last-child 
       border-right: 0
       margin-left: 0rem
+      a
+        display: block
+        padding: .4rem .5rem
 
 thead
   .button
