--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -21,10 +21,19 @@
   margin: 0
   padding: 0
 
+section.forgot-password
+  padding: 4rem   
+  background-color: lighten($color-yellow-1, 10%)
+  opacity: .7
+
+  input
+    border: 0
+    padding: .5rem
+
 section.video-promo, section.newsletter
   padding: 0 2rem
 
-section.video-promo, section.newsletter, section.press
+section.video-promo, section.newsletter, section.press, section.forgot-password
   min-width: 700px
   max-width: 1500px
   margin: 0 auto
