--- a/app/views/passwords/new.html.haml
+++ b/app/views/passwords/new.html.haml
@@ -1,5 +1,4 @@
-.row
-  .columns.panel.radius.callout
-    %h5 Forgot Your Password?
-    %p Enter the email address associated with your account, and you'll receive a link via email that will allow you to create a new password.
-    = render 'reset_form'
+%section.forgot-password
+  %h2 Forgot Your Password?
+  %p Enter the email address associated with your account, and you'll receive a link via email that will allow you to create a new password.
+  = render 'reset_form'
