Add froala to all textarea fields

--- a/app/views/announcements/_form.html.haml
+++ b/app/views/announcements/_form.html.haml
@@ -13,8 +13,7 @@
 
   %section
     %h4 Body
-    .form-item
-      = f.text_area :body
+    = f.text_area :body, :id => "edit"
 
   .submit-buttons
     %ul
