improving the display of the text editor in forms

--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -118,14 +118,7 @@ ul.accepts_submission_types
   margin-left: 1.6rem
 
 .textarea .form_label
-  background-color: $color-grey-2
-  font-style: italic
-  color: $color-grey-1
-  padding: 1rem
-  margin-top: -.35rem
-  margin-bottom: 1rem
-  border-bottom-right-radius: $global-radius
-  border-bottom-left-radius: $global-radius
+  margin: 0 !important
 
 .textarea ul.wysihtml5-toolbar
   background-color: $color-grey-2
