--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -31,7 +31,7 @@
         = f.check_box :remove_thumbnail
         Remove Thumbnail
     .form-item
-      = f.input :media_credit
+      = f.input :media_credit, :as => :string
     .form-item
       = f.input :media_caption
 
