--- a/app/views/earned_badges/_form.html.haml
+++ b/app/views/earned_badges/_form.html.haml
@@ -6,10 +6,12 @@
   %section
     = select_tag :student, options_from_collection_for_select(current_course.students, "id", "name", @earned_badge.try(:student_id)), :prompt => "Select Student"
 
-    .textarea.panel
+  %section
+    .textarea
       %h4 #{term_for :badge} Feedback
-      = f.text_area :feedback
       .form_label Enter a message to the #{term_for :student} regarding their work
+      = f.text_area :feedback
+
   .submit-buttons
     %ul
       %li= f.button :submit, "#{@earned_badge.persisted? ? 'Update' : 'Award '} #{term_for :badge}"
