--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -116,7 +116,7 @@ section.video-promo, section.newsletter, section.press, section.forgot-password
     width: 30%
     .ui-widget-content, .ui-widget-header
       padding: .5rem
-      background-color: $primary-color-1
+      background: $primary-color-1 !important
       opacity: .9
 
     .ui-tabs-nav
