--- a/app/views/grades/standard_edit/_score_level_grading_fields.html.haml
+++ b/app/views/grades/standard_edit/_score_level_grading_fields.html.haml
@@ -1,4 +1,4 @@
-.small-12.medium-4.columns.gradebox(ng-click="grade.disableCustomValue()" ng-class="{'inactive': grade.is_custom_value}" tooltips tooltip-size="medium" tooltip-title="Click to use score levels" tooltip-side="bottom" tooltip-delay="800")
+gradebox(ng-click="grade.disableCustomValue()" ng-class="{'inactive': grade.is_custom_value}" tooltips tooltip-size="medium" tooltip-title="Click to use score levels" tooltip-side="bottom" tooltip-delay="800")
 
   -# dynamic label for select box
   %label(for="grade_raw_score" ng-click="grade.disableCustomValue()" ng-class="{'inactive': grade.is_custom_value}")
@@ -7,7 +7,7 @@
   %select#grade_raw_score(name="grade[raw_score]" ng-model="grade.raw_score" ng-disabled="grade.is_custom_value" ng-click="grade.enableScoreLevels($event)" ng-change="grade.update()" ng-class="{'disabled': grade.is_custom_value}")
     %option(value="{{scoreLevel.value}}" ng-repeat="scoreLevel in assignmentScoreLevels" ng-selected="grade.raw_score == scoreLevel.value") {{scoreLevel.name}} ({{scoreLevel.formatted_value}} points)
 
-.small-12.medium-2.columns.gradebox(ng-click="grade.enableCustomValue()" ng-class="{'inactive': ! grade.is_custom_value}" tooltips tooltip-title="Click to enable custom grading" tooltip-size="medium" tooltip-side="bottom" tooltip-delay="800")
+.gradebox(ng-click="grade.enableCustomValue()" ng-class="{'inactive': ! grade.is_custom_value}" tooltips tooltip-title="Click to enable custom grading" tooltip-size="medium" tooltip-side="bottom" tooltip-delay="800")
   -# dynamic label for custom value field
   %label#custom-value-label(for="grade_raw_score" ng-click="grade.enableCustomValue()" ng-class="{'disabled': ! grade.is_custom_value}")
     Custom Value
